# cocotb_guide

./: .editorconfig  .gitattributes  .gitignore  Operators.py  README.md  main.fdb_latexmk  main.fls
Python_Fundementals/: Logging_1.py
docs/: README.md  latexmkrc  main.tex
docs/bibliography/: references.bib
docs/chapters/: 00-roadmap.tex  01-verification-context.tex  02-cocotb-fundamentals.tex  03-testbench-architecture.tex  04-clocks-resets-timing.tex  05-randomization-coverage.tex  06-debug-and-analysis.tex  07-regression-and-ci.tex  08-case-studies.tex
docs/config/: macros.tex  metadata.tex  packages.tex  theme.tex
docs/figures/specs/fsm/: template.yaml
docs/figures/specs/schematic/: template.yaml
docs/figures/specs/timing/: template.yaml
docs/frontmatter/: titlepage.tex
docs/tools/: README.md  pyproject.toml
docs/tools/src/cocotb_dv_guide/: __init__.py
docs/tools/src/cocotb_dv_guide/diagramgen/: __init__.py  __main__.py  cli.py  models.py  styles.py
docs/tools/src/cocotb_dv_guide/diagramgen/renderers/: __init__.py  base.py  fsm.py  schematic.py  timing.py
docs/tools/tests/: test_specs.py
src/Python_Fundementals/: Logging.py  Operators.py  Variables.py
test/: QUICK_REFERENCE.py  README_EXERCISE.md  verification_exercise.py  verification_exercise_SOLUTION.py
